# hedgehog

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
src/: event_handler.rs  file.rs  inline_code.rs  main.html  main.rs  message.rs  rpc.rs
static/: hedgehog-frontend.js  hedgehog-frontend.wasm  index.html
