[package]
name = "hedgehog-frontend"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
yew = { version = "0.14.3", features = ["std_web"] }
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
